syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "RegistryServiceProto";

package com.tq.microservice.registryservice;

import "com/tq/microservice/common.proto";

enum InstanceType {
    SERVICE = 0;
    CLIENT = 1;
}

message RegisterInstanceRequest {
    InstanceType type = 1;
    common.InstanceId instanceId = 2;
    string service_name = 3;
    string service_version = 4;
}

message RegisterInstanceResponse {
    // null
}

message UnregisterInstanceRequest {
    InstanceType type = 1;
    common.InstanceId instanceId = 2;
    string service_name = 3;
    string service_version = 4;
}

message UnregisterInstanceResponse {
}

message QueryServiceRequest {
    string service_name = 1;
    string service_version = 2;
}

message QueryServiceResponse {
    string service_name = 1;
    string service_version = 2;
    repeated common.InstanceId instance = 3;
}

message QueryServiceCatalogRequest {
    // null
}

message QueryServiceCatalogResponse {
    repeated string service_names = 1;
}

service RegistryService {
    rpc RegisterInstance(RegisterInstanceRequest) returns (RegisterInstanceResponse) {}
    rpc UnregisterInstance(UnregisterInstanceRequest) returns (UnregisterInstanceResponse) {}
    rpc QueryService(QueryServiceRequest) returns (QueryServiceResponse) {}
    rpc QueryServiceCatalog(QueryServiceCatalogRequest) returns (QueryServiceCatalogResponse) {}
}

